--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,14 @@
+body {
+  font-family: "Plus Jakarta Sans", sans-serif !important;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.container {
+  flex: 1;
+}
+
 .navbar {
   height: 5rem;
   background-color: #ffffff;
@@ -47,16 +58,16 @@
 }
 
 /* Cards */
-/* .card {
+.listing-card {
   border: none !important;
   margin-bottom: 2rem;
-} */
+}
 
-/* .card-img-top {
+.card-img-top {
   border-radius: 1rem !important;
   width: 100% !important;
   object-fit: cover !important;
-} */
+}
 
 .card-body {
   padding: 0 !important;
@@ -64,4 +75,53 @@
 
 .card-text p {
   font-weight: 400;
+}
+
+.listing-link {
+  text-decoration: none;
+}
+
+/* card effect */
+
+.card-img-overlay {
+  opacity: 0;
+}
+
+.card-img-overlay:hover {
+  opacity: 0.2;
+  background-color: white;
+}
+
+/* new page */
+
+.add-btn {
+  background-color: #fe424d !important;
+  border: none !important;
+}
+
+/* edit page */
+
+.edit-btn {
+  background-color: #fe424d !important;
+  border: none !important;
+}
+
+/* Show Page */
+.show-img {
+  height: 30vh;
+}
+
+.btns {
+  display: flex;
+}
+
+.show-card {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+/* Map */
+#map {
+  height: 400px;
+  width: 80vh;
 }
