--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,19 +1,87 @@
 <% layout('/layouts/boilerplate') %>
-<body>
-    <h3>Create a new listing</h3>
-    <form action="/listings" method="POST">
-        <input name="listing[title]" placeholder="Enter title" type="text" />
-        <br><br>
-        <textarea name="listing[description]" placeholder="Enter description" type="text"></textarea>
-        <br><br>
-        <input name="listing[image]" placeholder="Enter image URL/Link" type="text">
-        <br><br>
-        <input name="listing[price]" placeholder="Enter Price" type="number">
-        <br><br>
-        <input name="listing[country]" placeholder="Enter Country" type="text">
-        <br><br>
-        <input name="listing[location]" placeholder="Enter Location" type="text">
-        <br><br>
-        <button>Add</button>
-    </form>
-</body>
+
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
+            <h3>Create a new listing</h3>
+            <br>
+            <form action="/listings" method="POST" class="needs-validation" novalidate enctype="multipart/form-data">
+                <div class="mb-3">
+                    <label for="title" class="form-lable">Title</label>
+                    <input 
+                    name="listing[title]" 
+                    placeholder="Enter title" 
+                    type="text" 
+                    class="form-control"
+                    required
+                    />
+                    <div class="valid-feedback">Title looks good</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="description" class="form-lable">Description</label>
+                    <textarea 
+                    name="listing[description]" 
+                    class="form-control"
+                    required
+                    ></textarea>
+                    <div class="invalid-feedback">Please enter a short description</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="image" class="form-lable">
+                        Upload Image
+                    </label> 
+                    <input 
+                    name="listing[image]" 
+                    type="file" 
+                    class="form-control" 
+                    required
+                    />
+                </div>
+
+                <div class="row">
+                    <div class="mb-3 col-md-4">
+                        <label for="price" class="form-lable">Price</label> 
+                        <input 
+                        name="listing[price]" 
+                        placeholder="Enter Price" 
+                        type="number"
+                        class="form-control" 
+                        required 
+                        />
+                        <div class="invalid-feedback">Please enter a number</div>
+                    </div>
+
+                    <div class="mb-3 col-md-8">
+                        <label for="country" class="form-lable">Country</label>
+                        <input 
+                        name="listing[country]" 
+                        placeholder="Enter Country" 
+                        type="text" 
+                        class="form-control" 
+                        required
+                        />
+                        <div class="invalid-feedback">Country should be valid</div>
+                    </div>
+                </div>
+                
+                <div class="mb-3">
+                    <label for="location" class="form-lable">Location</label>
+                    <input 
+                    name="listing[location]" 
+                    placeholder="Enter Location" 
+                    type="text" 
+                    class="form-control" 
+                    required
+                    />
+                    <div class="invalid-feedback">Location should be valid</div>
+                </div>
+                
+                <button class="btn btn-dark add-btn mt-3">Add</button>
+                <br><br>
+            </form>
+        </div>
+    </div>
+
+   
+   
